Fix: Adjust gap between folders

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
+    gap: 1.5vh;
     width: 100%;
     margin: 0 auto;
 }
